--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -60,6 +60,8 @@ image::Ui.png[width="790"]
 
 Note: GUI deck displays work ideally for decks with 10 or less cards. Better GUI support will be included for display of decks in V2.0.
 
+Please use scroll bar to view the windows properly.
+
 ====
 *Command Format*
 
