--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -80,6 +80,17 @@ should disappear.
 
 * If everything above executes as stated, you can use $aveNUS to plan your expenditure in NUS now!
 
+//tag::roby1[]
+[NOTE]
+This application is optimized for screen resolution of 1400x900 pixels and higher. Anything lower than that and you
+might experienced some bugs.
+
+[IMPORTANT]
+Ensure that your scaling setting is set to 100% as anything higher might result in text being cut off.
+
+image::ScalingSetting.png[]
+//end::roby1[]
+
 === Navigating $aveNUS
 
 * TODO insert when we complete the user interface.
@@ -116,11 +127,12 @@ For example, `delete INDEX...` works with commands such as `delete 1`, `delete 1
 This section highlights the commands that $aveNUS supports. These include information about the command's
 function, format as well as example usages of the command.
 
-//tag::general[]
+//tag::roby2[]
+
 === General Commands
 
-$aveNUS provides the user with a set of commands that are not feature-specific to
-enhance the user's experience as a whole.
+General commands are used to enhance the user's experience when using the app and also provide some useful information
+to make the user more familiar with the app.
 
 ==== Viewing help: `help`
 
@@ -128,9 +140,15 @@ Display the help screen that allows you to view the list of commands available a
 by clicking the `Guide` button.
 
 ****
-*Format*: `help`
+*Format*: `help` +
 *Example*: `help`
 ****
+
+[width="100%",cols="5%,95%", grid=none]
+|===
+ifdef::env-github[| :white_check_mark: a| You will see the help the help window, diplaying the list of commands available.]
+ifndef::env-github[a| icon:check[role="green", size="2x"] a| You will see the help the help window, diplaying the list of commands available.]
+|===
 
 ==== Viewing previously typed commands: `history`
 
@@ -145,6 +163,10 @@ The user can view up to 10 previously typed commands.
 
 [NOTE]
 A message stating that "You have not entered any commands." is displayed if you have not input any commands prior to the call to `history`.
+
+[IMPORTANT]
+This command only allows you to see previously typed commands. Any commands done through the buttons on the menu pane
+will not be shown.
 
 [width="100%",cols="5%,95%", grid=none]
 |===
@@ -164,24 +186,37 @@ The `history` command will only display previous commands with no duplicate comm
 
 ==== Viewing information about a command: `info`
 
-Displays the information of the command specified. A new window will be opened.
+Displays the information of the command specified. A new window will be opened showing additional information about the
+specified command, usage example, and expected output of the command.
 
 ****
 *Format*: `info COMMAND` +
 *Example*: `info edit`
 ****
 
+[NOTE]
+$aveNUS can only display one information window at a time. Therefore, subsequent usage of the `info` command will only
+display the latest command specified.
+
+[TIP]
+You will not have to worry about opening too many new information window as older information window closes as soon as
+a new one is opened!
+
 [width="100%",cols="5%,95%", grid=none]
 |===
 ifdef::env-github[| :white_check_mark: a| You will see a window pop-up specifying the details of the command you wanted more information about.]
 ifndef::env-github[a| icon:check[role="green", size="2x"] a| You will see a window pop-up specifying the details of the command you wanted more information about.]
+
+.Example of view of information window after user inputs `info edit`.
+image::InfoEditUI.png[]
 |===
 
 ==== Exiting the application: `exit`
 Exits the app. +
 
 ****
-*Format*: `exit`
+*Format*: `exit` +
+*Example*: `exit`
 ****
 
 [width="100%",cols="5%,95%", grid=none]
@@ -189,7 +224,7 @@ Exits the app. +
 ifdef::env-github[| :white_check_mark: a| Application closes.]
 ifndef::env-github[a| icon:check[role="green", size="2x"] a| Application closes.]
 |===
-//end::general[]
+//end::roby2[]
 
 === Food Items
 
