--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -434,14 +434,22 @@ Example:
 e.g. `help command/view`
 * *import* : `import filepath/FILE_NAME`
 * *export* : `export deck/DECK_NAME FILE_NAME`
-* *stats* : `stats [deck/DECK_NAME]` +
-e.g. `stats deck/science_deck`
 * *view* : `view [deck/DECK_NAME]` +
 e.g. `view deck/science_deck`
 * *create* : `create deck/DECK_NAME`
+* *add*: only applicable for Front-Back Cards and Multiple Choice Cards
+====
+** `add deck/DECK_NAME front/CARD_FRONT back/CARD_BACK [priority/HIGH_OR_LOW]`
+
+** `add deck/DECK_NAME front/CARD_FRONT back/CORRECT_OPTION choice/CHOICE_A choice/CHOICE_B [priority/HIGH_OR_LOW]`
+
+====
+* *edit* : `edit deck/DECK_NAME action/DESIRED_ACTION [index/CARD_INDEX] [front/NEW_FRONT_TEXT] [back/NEW_BACK_TEXT]` +
+e.g. `edit deck/science_deck action/edit index/1 front/what is a cell back/a cell is a building block`
 * *test* : `test deck/DECK_NAME duration/TIME_LIMIT_ALLOWED` +
 e.g. `test deck/science_deck duration/0` +
 e.g. `test deck/science_deck duration/100`
+====
 ** *next card*: `next`
 ** *previous card*: `prev`
 ** *exit test mode*: `exit`
@@ -455,8 +463,8 @@ e.g. `test deck/science_deck duration/100`
 *** see question: `front`
 ** *Java/Javascript Cards:*
 *** open coding playground: `code`
-
+====
+* *stats* : `stats [deck/DECK_NAME]` +
+e.g. `stats deck/science_deck`
 * *quit* : `quit`
-* *edit* : `edit deck/DECK_NAME action/DESIRED_ACTION [index/CARD_INDEX] [front/NEW_FRONT_TEXT] [back/NEW_BACK_TEXT]` +
-e.g. `edit deck/science_deck action/edit index/1 front/what is a cell back/a cell is a building block`
 // end::summary[]
